--- a/docs/css/index.css
+++ b/docs/css/index.css
@@ -1,10 +1,17 @@
+* {
+  margin: 0;
+  padding: 0;
+  font-family: 'Poppins', sans-serif;
+}
+
+
 /* Working with FLEXBOX */
 body, nav, ul, main, header, article, section, form, section, #container, footer, h1, h2, h3, h4{
   display: flex;
   width: 100%;
 }
 
-
+/* ---------------------- General --------------------- */
 
 body { 
   font-family: sans-serif; /* Poppines */
@@ -12,27 +19,57 @@ body {
   flex-direction: column;
 }
 
+h1 {
+  font-size: 10em;
+  justify-content: center;
+  font-family: 'Poppins';
+  font-weight: 700;
+}
+
+h2 {
+  justify-content: center;
+}
+
+h4 {
+  justify-content: center;
+}
+
+footer {
+  height: 5vh;
+  margin: 1% 0;
+  align-items: center;
+}
+
 /* ---------------------- Nav --------------------- */
 
 nav {
-  height: 7vh;
-  width: 80%;
+  position: fixed;
+  z-index: 99;
+  height: 8.5vh;
+  width: 100%;
   color: white;
   justify-content: space-around;
+  font-size: 1.5em;
+  font-weight: 700;
+}
+
+nav.hover {
+  background-color: #b3cd81;;
+  transition: .5s ease;
+  height: 10vh;
 }
 
 ul {
-  width: 70%;
   flex-direction: row;
   align-items: center;
 }
 
 #left {
-
+  margin-left: 5%;
 }
 
 #right {
-  width: 10%;
+  width: 20%;
   flex-direction: row;
   justify-content: space-evenly;
 }
@@ -45,27 +82,16 @@ li {
 
 /* ---------------------- Header --------------------- */
 
-h1 {
-  font-size: 10em;
-  justify-content: center;
-}
-
-h2 {
-  font-size: 1.8em;
-  justify-content: center;
-}
-
 header {
   background-image: url("../uploads/bg.jpg");
   height: 100vh;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-
   color: white;
   flex-direction: column;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-evenly;
 }
 
 header > article {
@@ -104,9 +130,9 @@ main {flex-direction: column;}
 
 #benefits {
   flex-direction: column;
-  height: 70vh;
+  height: 85vh;
   color: white;
-  background-color: green;
+  background-color: #8dc541;
   justify-content: space-evenly;
   margin-bottom: 5%;
 }
@@ -120,11 +146,13 @@ main {flex-direction: column;}
 
 #benefits section > article{
   width: 20%;
-  height: 35vh;
+  height: 50vh;
   flex-direction: column;
   justify-content: space-evenly;
+  font-size: 1.5em;
 }
 
+/* -------------------- API containers -------------------- */
 
 main section {
   flex-direction: column;
@@ -135,10 +163,50 @@ main section form {
   margin-bottom: 5%;
 }
 
-footer {justify-content: center;}
+img { 
+  width: 400px;
+}
+
+#container {
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+#container section {
+  flex-direction: column;
+  width: 33%;
+}
+
+
+.flex {
+  display: flex;
+  justify-content: space-evenly;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  color: white;
+  font-family: 'Poppins';
+  font-weight: 600;
+  letter-spacing: 4px;
+}
+
+.flex h2 {
+  font-size: 1.8em;
+  text-transform: capitalize;
+}
+
+.flex p {
+ width: 75%;
+ line-height: 1.8;
+}
+
+.image_wrapper {
+  display: flex;
+  justify-content: center;
+}
 
 /* -------------------- Arrow Animation -------------------- */
-.arrow{height: 15vh;}
+.arrow{height: 0vh;}
 
 .arrow span{
   display: block;
@@ -170,29 +238,28 @@ footer {justify-content: center;}
   }
 }
 
+/* -------------------- Hover -------------------- */
 
-/* -------------------- API containers -------------------- */
-
-#container {
-  flex-direction: row;
-  flex-wrap: wrap;
-}
-
-#container section {
-  flex-direction: column;
-  width: 33%;
-}
-
-
-.article_content_wrapper {
+.container {
   display: flex;
-  justify-content: space-evenly;
-  flex-direction: column;
-  align-items: center;
+  position: relative;
+  width: 50%;
+  margin-bottom: 2%;
 }
 
-.image_wrapper {
-  display: flex;
-  justify-content: center;
-  margin-bottom: 10px;
+.overlay {
+  position: absolute;
+  /* top: 0; */
+  /* bottom: 0; */
+  /* left: 0; */
+  /* right: 0; */
+  height: 100%;
+  width: 80%;
+  opacity: 0;
+  transition: .5s ease;
+  background-color: #22760aa1;
+}
+
+.container:hover .overlay {
+  opacity: 1;
 }
