--- a/docs/css/index.css
+++ b/docs/css/index.css
@@ -2,8 +2,8 @@
   margin: 0;
   padding: 0;
   font-family: 'Poppins', sans-serif;
+  scroll-behavior: smooth;
 }
-
 
 /* Working with FLEXBOX */
 body, nav, ul, main, header, article, section, form, section, #container, footer, h1, h2, h3, h4{
@@ -56,7 +56,12 @@ nav {
 nav.hover {
   background-color: #b3cd81;;
   transition: .5s ease;
-  height: 10vh;
+  height: 5vh;
+}
+
+nav a {
+  text-decoration: none;
+  color: white;
 }
 
 ul {
@@ -128,7 +133,10 @@ main {flex-direction: column;}
 
 #info p {text-align: center;}
 
+/* ---------------------- Benefits --------------------- */
+
 #benefits {
+  display: none;
   flex-direction: column;
   height: 85vh;
   color: white;
@@ -137,7 +145,13 @@ main {flex-direction: column;}
   margin-bottom: 5%;
 }
 
-#benefits h2 {justify-content: center;}
+#benefits h2 {
+  font-size: 2em;
+  font-weight: 700;
+  letter-spacing: 5px;
+  text-transform:uppercase;
+  justify-content: center;
+}
 
 #benefits > section{
   flex-direction: row;
@@ -145,7 +159,7 @@ main {flex-direction: column;}
 }
 
 #benefits section > article{
-  width: 20%;
+  width: 25%;
   height: 50vh;
   flex-direction: column;
   justify-content: space-evenly;
@@ -160,6 +174,7 @@ main section {
 
 main section form {
   justify-content: center;
+  margin-top: 5%;
   margin-bottom: 5%;
 }
 
