--- a/docs/css/index.css
+++ b/docs/css/index.css
@@ -37,6 +37,15 @@ body {
   flex-direction: column;
 }
 
+a {
+  text-decoration: none;
+  color: white;
+}
+
+i {
+  font-family: 'Pacifico', cursive;
+}
+
 h1 {
   font-size: 10em;
   justify-content: center;
@@ -58,6 +67,24 @@ footer {
   align-items: center;
 }
 
+/* ---------------------- button --------------------- */
+
+button {
+  background-color: #2D612F;
+  border: none;
+  padding: 15px 50px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+  border-radius: 30px;
+  font-size: 1.2em;
+  text-transform: capitalize;
+  letter-spacing: 3.5px;
+}
+
+.brown {
+  background-color: #84451E;
+}
+
 /* ---------------------- Nav --------------------- */
 
 nav {
@@ -75,11 +102,6 @@ nav.hover {
   background-color: #b3cd81;;
   transition: .5s ease;
   height: 5vh;
-}
-
-nav a {
-  text-decoration: none;
-  color: white;
 }
 
 ul {
@@ -129,13 +151,14 @@ header > article section {
   justify-content: space-evenly;
 }
 
+header i {padding-left: 20px;}
 
 /* ---------------------- Main --------------------- */
 
 main {flex-direction: column;}
 
 #info {
-  height: 25vh;
+  height: 35vh;
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
@@ -149,7 +172,21 @@ main {flex-direction: column;}
   align-items: center;
 }
 
-#info p {text-align: center;}
+#info h2 {
+  font-size: 1.5em;
+  font-weight: 500;
+}
+
+#info i {
+  font-size: 22px;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+#info p {
+  text-align: center;
+  line-height: 30px;
+}
 
 /* ---------------------- Benefits --------------------- */
 
@@ -158,7 +195,7 @@ main {flex-direction: column;}
   flex-direction: column;
   height: 85vh;
   color: white;
-  background-color: #8dc541;
+  background-color: #2D612F;
   justify-content: space-evenly;
   margin-bottom: 5%;
 }
@@ -184,17 +221,52 @@ main {flex-direction: column;}
   font-size: 1.5em;
 }
 
-/* -------------------- API containers -------------------- */
+/* -------------------- Search form section -------------------- */
 
 main section {
   flex-direction: column;
 }
 
-main section form {
-  justify-content: center;
-  margin-top: 5%;
-  margin-bottom: 5%;
+main #form{
+  height: 15vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  margin: 5% 0;
 }
+
+main #form h3 {
+  justify-content: center;
+}
+
+main form {
+  justify-content: center;
+}
+
+main form button {
+  background-color: rgb(76, 175, 80);
+  border: none;
+  padding: 15px 50px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+  border-radius: 0px 20px 20px 0px;
+}
+
+form input[type=text] {
+  font-size: 15px;
+  background: rgb(247 247 247);
+  border: 2px solid #84451e;
+  width: 25%;
+  padding: 10px 10px 10px 20px;
+  border-radius: 20px 0px 0px 20px;
+}
+
+
+.fa-search:before {
+  color: white;
+}
+
+/* -------------------- API containers -------------------- */
 
 img { 
   width: 400px;
@@ -282,10 +354,6 @@ img {
 
 .overlay {
   position: absolute;
-  /* top: 0; */
-  /* bottom: 0; */
-  /* left: 0; */
-  /* right: 0; */
   height: 100%;
   width: 80%;
   opacity: 0;
