--- a/docs/css/index.css
+++ b/docs/css/index.css
@@ -42,6 +42,11 @@ a {
   color: white;
 }
 
+a:hover {
+  transition: .5s ease;
+  opacity: 0.8;
+}
+
 i {
   font-family: 'Pacifico', cursive;
 }
@@ -114,7 +119,7 @@ ul {
 }
 
 #right {
-  width: 20%;
+  width: 30%;
   flex-direction: row;
   justify-content: space-evenly;
 }
@@ -122,6 +127,69 @@ ul {
 li {
   display: block;
   text-decoration: none;
+}
+
+/* ---------------------- Extra Nav Bookmarks FAV --------------------- */
+
+nav section > section {
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  margin: 1% 0%;
+}
+
+.navBookmarks {
+  height: 0%;
+  width: 100%;
+  position: fixed;
+  z-index: 999;
+  background-color: rgb(0,0,0);
+  overflow-y: hidden;
+  transition: 0.5s;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.closebtn {
+  font-size: 60px;
+  display: flex;
+  margin: 1% 3.5% 0%;
+}
+
+.edited {
+  position: absolute;
+  top: 87%;
+  left: 83%;
+}
+
+nav .edited .fa-bookmark:before {
+  content: "\f02e";
+  color: #a3c648;
+  font-size: 40px;
+}
+
+
+/* ---------------------- Testing --------------------- */
+
+#bookmarks {
+  display: flex;
+  flex-wrap: wrap;
+  height: 100vh;
+  width: 80%;
+  align-items: center;
+  align-content: center;
+  justify-content: space-evenly;
+}
+
+#bookmarks > .container {
+  display: flex;
+  width: auto;
+}
+
+#bookmarks > img {
+  width: 200px;
 }
 
 
@@ -268,9 +336,7 @@ form input[type=text] {
 
 /* -------------------- API containers -------------------- */
 
-img { 
-  width: 400px;
-}
+#container img {width: 400px;}
 
 #container {
   flex-direction: row;
